--- a/shop.html
+++ b/shop.html
@@ -50,25 +50,25 @@
 		  <div class="w3-row-padding w3-center " style="margin-top:64px">
 			<div class="w3-quarter ">
 			  <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-			  <img src="cinnamoroll plush 1.png" alt="Merch Type" style="width:100%">
+			  <img src="Cinnamoroll plush 1.png" alt="Cinnamoroll 1" style="width:100%">
 			  <p class="w3-large"></p>
 			  <p></p>
 			</div>
 			<div class="w3-quarter">
 			  <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-			  <img src="kuromi plush 1.png" alt="Design Process" style="width:100%">
+			  <img src="Kuromi Plush 1.png" alt="Kuromi 1" style="width:100%">
 			  <p class="w3-large"></p>
 			  <p></p>
 			</div>
 			<div class="w3-quarter">
 			  <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-			  <img src="sanrio plush 1.png" alt="Gift Making" style="width:100%">
+			  <img src="Sanrio Plush 1.png" alt="Cinnamoroll" style="width:100%">
 			  <p class="w3-large"></p>
 			  <p></p>
 			</div>
 			<div class="w3-quarter">
 			  <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-			  <img src="kuromi plush 2.png" alt="Community" style="width:100%">
+			  <img src="Kuromi plush 2.png" alt="Community" style="width:100%">
 			  <p class="w3-large"></p>
 			  <p></p>
 			</div>
