--- a/shop.html
+++ b/shop.html
@@ -68,7 +68,7 @@
 			</div>
 			<div class="w3-quarter">
 			  <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-			  <img src="Kuromi plush 2.png" alt="Community" style="width:100%">
+			  <img src="Kuromi plush 2.png" alt="Kuromi" style="width:100%">
 			  <p class="w3-large"></p>
 			  <p></p>
 			</div>
